--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
-    "lodash": "^4.17.15",
+    "lodash.sortby": "^4.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
